<resources>
    <string name="app_name">Chapter5Topic4Team2</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="have_you_joined">Have you joined?</string>
</resources>